load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_static_library(
    name = "kgrpc_fat",
    deps = [
        ":kgrpc",
        "//grpc_dep:grpc_core_prebuilt",
    ],
)

cc_library(
    name = "kgrpc",
    srcs = ["src/kgrpc.cpp"],
    hdrs = glob(["include/kgrpc.h"]),
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//grpc_dep:grpc_core_prebuilt",
    ],
)

cc_static_library(
    name = "protowire_fat",
    deps = [
        ":protowire",
    ],
)

cc_library(
    name = "protowire",
    srcs = ["src/protowire.cpp"],
    hdrs = glob(["include/protowire.h"]),
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_protobuffers_protobuf//:protobuf_lite",
    ],
)

cc_binary(
    name = "grpc_flat",
    deps = [
        "//grpc_dep:grpc_core_prebuilt",
    ],
)
