load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_static_library(
    name = "kgrpc",
    deps = [
        ":kgrpc_lib",
    ],
)

cc_library(
    name = "kgrpc_lib",
    srcs = ["src/kgrpc.cpp"],
    hdrs = glob(["include/kgrpc.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//prebuilt-deps/grpc_fat:grpc_core_prebuilt",
    ],
)

cc_static_library(
    name = "protowire_fat",
    deps = [
        ":protowire",
    ],
)

cc_library(
    name = "protowire",
    srcs = ["src/protowire.cpp"],
    hdrs = glob(["include/protowire.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_protobuffers_protobuf//:protobuf_lite",
    ],
)
