module(
    name = "kgrpc",
    version = "0.1",
)

# rules_cc for cc_library support
bazel_dep(name = "rules_cc", version = "0.2.0")

# required to build for apple targets (like iOS)
bazel_dep(name = "apple_support", version = "1.22.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "platforms", version = "1.0.0")

# Protobuf
bazel_dep(
    name = "protobuf",
    version = "31.1",
    repo_name = "com_github_protobuffers_protobuf",
)

# gRPC library
GRPC_VERSION = "1.74.1"

## gRPC source dependency

bazel_dep(
    name = "grpc",
    version = GRPC_VERSION,
    repo_name = "com_github_grpc_grpc",
)

# Linux toolchain setup (cross-compile)

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

## The sysroot for linux cross compilation

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "org_chromium_sysroot_linux_x64",
    build_file_content = 'filegroup(name="sysroot", srcs=glob(["**"]), visibility=["//visibility:public"])',
    sha256 = "1be60e7c456abc590a613c64fab4eac7632c81ec6f22734a61b53669a4407346",
    urls = ["http://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2028cdaf24259d23adcff95393b8cc4f0eef714b/debian_bullseye_amd64_sysroot.tar.xz"],
)

http_archive(
    name = "org_chromium_sysroot_linux_arm64",
    build_file_content = 'filegroup(name="sysroot", srcs=glob(["**"]), visibility=["//visibility:public"])',
    sha256 = "e4a9ae49ffa75c5fabe41c1a73209769fcfd202c786a1cb52057ddbd68b91c45",
    urls = ["http://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/286feb74e2209a7a70add5497609ac27685022fa/debian_bullseye_arm64_sysroot.tar.xz"],
)

## The toolchain setup using the sysroot

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "15.0.7",
    stdlib = {
        "linux-x86_64": "stdc++",
        "linux-aarch64": "stdc++",
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_arm64//:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
