module(
    name = "kgrpc",
    version = "0.1",
)

# rules_cc for cc_library support
bazel_dep(name = "rules_cc", version = "0.2.0")

# required to build for apple targets (like iOS)
bazel_dep(name = "apple_support", version = "1.22.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "platforms", version = "1.0.0")

# Protobuf
bazel_dep(
    name = "protobuf",
    version = "31.1",
    repo_name = "com_github_protobuffers_protobuf",
)

# gRPC library
GRPC_VERSION = "1.74.1"

## gRPC source dependency

bazel_dep(
    name = "grpc",
    version = GRPC_VERSION,
    repo_name = "com_github_grpc_grpc",
)

# Linux toolchain setup (cross-compile)

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

new_local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository",
)

new_local_repository(
    name = "konan_linux_aarch64_sysroot",
    build_file_content = 'filegroup(name="sysroot", srcs=glob(["**"]), visibility=["//visibility:public"])',
    path = "/Users/johannes.zottele/.konan/dependencies/aarch64-unknown-linux-gnu-gcc-8.3.0-glibc-2.25-kernel-4.9-2/aarch64-unknown-linux-gnu/sysroot",
)

new_local_repository(
    name = "konan_linux_x64_sysroot",
    build_file_content = 'filegroup(name="sysroot", srcs=glob(["**"]), visibility=["//visibility:public"])',
    path = "/Users/johannes.zottele/.konan/dependencies/x86_64-unknown-linux-gnu-gcc-8.3.0-glibc-2.19-kernel-4.9-2/x86_64-unknown-linux-gnu/sysroot",
)

## The toolchain setup using the sysroot

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.1",
    stdlib = {
        "linux-aarch64": "libc++",
        "linux-x86_64": "libc++",
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@konan_linux_aarch64_sysroot//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@konan_linux_x64_sysroot//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
