module(
    name = "kgrpc",
    version = "0.1",
)

# rules_cc for cc_library support
bazel_dep(name = "rules_cc", version = "0.2.0")

# required to build for apple targets (like iOS)
bazel_dep(name = "apple_support", version = "1.22.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "platforms", version = "1.0.0")

# Protobuf
bazel_dep(
    name = "protobuf",
    version = "31.1",
    repo_name = "com_github_protobuffers_protobuf",
)

# gRPC library
GRPC_VERSION = "1.74.1"

## gRPC source dependency
bazel_dep(
    name = "grpc",
    version = GRPC_VERSION,
    repo_name = "com_github_grpc_grpc",
)

# Linux toolchain setup (cross-compile)

#TODO: Remove
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

register_toolchains(
    "//toolchain:toolchain_linux_x64_konan",
    #    "//toolchain:exec_macos_konan",
)
