load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_static_library(
    name = "grpcpp_c_static",
    deps = [
        ":grpcpp_c",
    ],
)

cc_library(
    name = "grpcpp_c",
    srcs = ["src/grpcpp_c.cpp"],
    hdrs = glob(["include/**/*.h"]),
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_grpc//:channelz",
        "@com_github_grpc_grpc//:generic_stub",
        "@com_github_grpc_grpc//:grpc_credentials_util",
    ],
)

cc_static_library(
    name = "protowire_static",
    deps = [
        ":protowire",
    ],
)

cc_library(
    name = "protowire",
    srcs = ["src/protowire.cpp"],
    hdrs = glob(["include/*.h"]),
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:protobuf_lite",
    ],
)
