module(
    name = "grpcpp_c",
    version = "0.1",
)

# rules_cc for cc_library support
bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)

# Protobuf
bazel_dep(
    name = "protobuf",
    version = "31.1",
    repo_name = "com_google_protobuf",
)

# gRPC C++ library
bazel_dep(
    name = "grpc",
    version = "1.73.1",
    repo_name = "com_github_grpc_grpc",
)

emsdk_version = "4.0.11"

bazel_dep(name = "emsdk", version = emsdk_version)
git_override(
    module_name = "emsdk",
    remote = "https://github.com/emscripten-core/emsdk.git",
    strip_prefix = "bazel",
    tag = emsdk_version,
)
