load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")
load("//:tools/collect_headers.bzl", "include_dir")

package(default_visibility = ["//visibility:public"])

#### Compile gRPC from scratch ####

cc_static_library(
    name = "grpc_fat",
    deps = [
        "@com_github_grpc_grpc//:grpc",
    ],
)

include_dir(
    name = "grpc_include_dir",
    target = "@com_github_grpc_grpc//:grpc",
)

#### Targets for pre-built dependency ####

cc_library(
    name = "grpc_core_prebuilt",
    hdrs = glob(["include/**"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    # pick the right prebuilt .a:
    deps = select({
        ":ios_device_arm64": [":grpc_core_ios_arm64"],
        ":ios_simulator_arm64": [":grpc_core_ios_sim_arm64"],
        ":ios_simulator_x64": [":grpc_core_ios_x64"],
        ":macos_arm64": [":grpc_core_macos_arm64"],
        "//conditions:default": [],
    }),
)

config_setting(
    name = "ios_device_arm64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:arm64",
        "@build_bazel_apple_support//constraints:device",
    ],
)

config_setting(
    name = "ios_simulator_arm64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:arm64",
        "@build_bazel_apple_support//constraints:simulator",
    ],
)

config_setting(
    name = "ios_simulator_x64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:x86_64",
        "@build_bazel_apple_support//constraints:simulator",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

cc_import(
    name = "grpc_core_ios_arm64",
    static_library = ":libgrpc_fat.ios_arm64.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "grpc_core_ios_sim_arm64",
    static_library = ":libgrpc_fat.ios_simulator_arm64.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "grpc_core_ios_x64",
    static_library = ":libgrpc_fat.ios_x64.a",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "grpc_core_macos_arm64",
    static_library = ":libgrpc_fat.macos_arm64.a",
    visibility = ["//visibility:public"],
)
